# newcpp

./: .gitignore  README.md  TODO
new_c++/: CMakeLists.txt  CMakePresets.json  TODO  build.bat  main.cpp  script.sh
new_c++/Logger/: Command.h  LoggerHandler.h  MyLogger.h  MyPrintf.h
new_c++/cmake/: Postsets.cmake  Presets.cmake
new_c++/docs/: Doxyfile
new_c++/include/: MapGenerator.h  example.h
new_c++/tests/: doctest.h  tests.cpp
